@@ -168,6 +168,9 @@ Changes with Apache 1.3b1
      on a per-server basis using the LogLevel directive. Conversion
      of log_*() in progress. [Randy Terbush]
 
+  *) Further enhance aplog_error() to not log filename, line number, and
+     errno information when it isn't applicable. [Ken Coar, Dean Gaudet]
+
   *) Canonicalise filenames under Win32. Short filenames are
      converted to long ones. Backslashes are converted to forward
      slashes. Case is converted to lower. Parts of URLs that do not
